[package]
name = "assert_infrequent"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Jonathan Behrens <fintelia@gmail.com>"]

description = "Assert that a line of code isn't executed too many times"
documentation = "https://docs.rs/assert_infrequent"
repository = "https://github.com/fintelia/assert_infrequent"

[dependencies]
backtrace = "0.3.5"
lazy_static = "1.0.0"
